fix overflow of notes preview in sidebar

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -30,6 +30,7 @@
 }
 
 .sidebar_notes {
+    height: calc(100% - 3.5rem);
     overflow-y: auto;
 }
 
